# libarray_cuda

./: Cargo.toml  build.rs
src/: context.rs  device_array.rs  device_comm.rs  device_ext.rs  device_linalg.rs  device_memory.rs  device_sync.rs  ffi.rs  host_memory.rs  lib.rs
src/cu/: map_kernels.cu  vector_kernels.cu
src/device/: array.rs  comm.rs  context.rs  ext.rs  linalg.rs  memory.rs  mod.rs  num.rs  random.rs  sync.rs
src/device/comm/: allreduce.rs  mod.rs
tools/: test.rs
