[package]
name = "array_cuda"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "array_cuda"
path = "src/lib.rs"

#[[bin]]
#name = "test"
#path = "tools/test.rs"

[build-dependencies]
#path = "../gcc-rs"
gcc = "*"

[dependencies]
float = "*"
libc = "*"
rand = "*"
scoped_threadpool = "=0.1.6"
time = "*"
vec_map = "*"

array = { path = "../libarray" }
#cuda = { path = "../libcuda" }
cuda = { git = "https://github.com/peterhj/libcuda.git" }
cuda_blas = { path = "../libcuda_blas" }
cuda_dnn = { path = "../libcuda_dnn" }
#cuda_dnn = { path = "../libcuda_dnn", features = ["v4"] }
cuda_rand = { path = "../libcuda_rand" }
cuda_sparse = { path = "../libcuda_sparse" }
